# monkeyarch

./: .gitignore  API.md  Cargo.toml  README.md  REQUIREMENTS.md  config.example.toml  monkeyarch.service
src/: config.rs  error.rs  main.rs  models.rs  security.rs  static_files.rs
src/handlers/: delete.rs  list.rs  mkdir.rs  mod.rs  move_file.rs  serve.rs  upload.rs
static/: app.js  index.html  style.css
